[tool.poetry]
name = "slip-control"
version = "0.1.0"
description = ""
authors = ["Stephen Welch <stephenwelchva@vt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
cvxpy = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
